--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,41 @@
-* {	
+body, ul, li, p {
 	margin: 0px;
 	padding: 0px;
-	font-family: Arial;
-	text-align: justify;
-}
-/** Alinhamento do menu*/
-span {
-	padding-right: 320px; 	
-}
-
-#menu ul {
-	margin: 0px;
-	background-color: #009999;
 	list-style: none;
-}
-/** put it aside (deixa de lado)*/
-#menu ul li {
-	display: inline; 	
-}	
-/** first 15px is top/bottom || 10px is left/right*/
-#menu ul li a {									
-	padding: 15px 10px;	
-	display: inline-block;
-	color: white;
-	text-decoration: none;
+	font-size: 1.2rem;
+	font-family: Arial;
 }
 
-#menu ul li a:hover {
-	color:#003333;
+a {
+	text-decoration: none;
+	color: white;
+}
+
+h1 {
+	text-align: center;
+	margin-top: 10px;
+}
+
+.header {
+	background-color: #00b386;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 20px;
+	align-items: center;
+}
+
+.menu {
+	display: flex;
+}
+
+.menu li {
+	margin-left: 10px;
+}
+
+.menu li a {
+	display: block;
+	padding: 10px;
 }
 
 #mapa {
@@ -36,7 +44,7 @@ span {
 }
 /** Configurações do texto */
 #texto {
-	padding: 10px 5px;
+	padding: 5px 5px;
 }
 
 footer {
